{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 199,
  "lineage": "29b0c5b8-918d-3c46-cb64-6a6ba77133ca",
  "resources": [
    {
      "module": "module.ec2-public-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5eff06f840b45e9",
            "arn": "arn:aws:ec2:us-east-1:661509478373:instance/i-0c9753226e6dd44e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9753226e6dd44e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "May",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05394cb7a2f63e706",
            "private_dns": "ip-10-0-101-144.ec2.internal",
            "private_ip": "10.0.101.144",
            "public_dns": "ec2-35-171-88-24.compute-1.amazonaws.com",
            "public_ip": "35.171.88.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04afdcf4e4dd5f783",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ff0aadae29fcc23",
            "tags": {
              "Name": "qa-amzlinux2-ec2"
            },
            "tags_all": {
              "Name": "qa-amzlinux2-ec2"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "qa-amzlinux2-ec2"
            },
            "vpc_security_group_ids": [
              "sg-0527a8acd1708f9bb"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:security-group/sg-0527a8acd1708f9bb",
            "description": "Security group with HTTP \u0026 SSH ports open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0527a8acd1708f9bb",
            "ingress": [],
            "name": "public_sg-20210603091648459000000001",
            "name_prefix": "public_sg-",
            "owner_id": "661509478373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2644459592",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0527a8acd1708f9bb",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4254989055",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0527a8acd1708f9bb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1911897025",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0527a8acd1708f9bb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09f7b27ba1e8a9192",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-129-104.compute-1.amazonaws.com",
            "public_ip": "54.145.129.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc-us-east-1a",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc-us-east-1a",
              "Owner": "amazon"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:internet-gateway/igw-08495460fa2848963",
            "id": "igw-08495460fa2848963",
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f7b27ba1e8a9192",
            "id": "nat-0bbf015fff0803f7f",
            "network_interface_id": "eni-01f3f6f39142f6291",
            "private_ip": "10.0.101.199",
            "public_ip": "54.145.129.104",
            "subnet_id": "subnet-05ff0aadae29fcc23",
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc-us-east-1a",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc-us-east-1a",
              "Owner": "amazon"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030d7d5ebc2a939711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bbf015fff0803f7f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030d7d5ebc2a93971",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08495460fa2848963",
            "id": "r-rtb-0d958f334c84b711a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d958f334c84b711a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:route-table/rtb-0fcd02cad328ec297",
            "id": "rtb-0fcd02cad328ec297",
            "owner_id": "661509478373",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc-db",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc-db",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:route-table/rtb-030d7d5ebc2a93971",
            "id": "rtb-030d7d5ebc2a93971",
            "owner_id": "661509478373",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc-private",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc-private",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:route-table/rtb-0d958f334c84b711a",
            "id": "rtb-0d958f334c84b711a",
            "owner_id": "661509478373",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myqavpc-public",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myqavpc-public",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e5281eb30505ecb",
            "route_table_id": "rtb-0fcd02cad328ec297",
            "subnet_id": "subnet-088e716ad972cb61d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04060f33ad296094c",
            "route_table_id": "rtb-0fcd02cad328ec297",
            "subnet_id": "subnet-07a938604021021f0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab8b89af0ca886c3",
            "route_table_id": "rtb-030d7d5ebc2a93971",
            "subnet_id": "subnet-0ffbca598eddb609f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0be1f26d45d8ec2",
            "route_table_id": "rtb-030d7d5ebc2a93971",
            "subnet_id": "subnet-00b58cda0b80519ff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0c8a57a4ae5b8ae",
            "route_table_id": "rtb-0d958f334c84b711a",
            "subnet_id": "subnet-05ff0aadae29fcc23"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aca441faacffd2b5",
            "route_table_id": "rtb-0d958f334c84b711a",
            "subnet_id": "subnet-0ac05e7fb3d8e8248"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-088e716ad972cb61d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "id": "subnet-088e716ad972cb61d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "database-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "database-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-07a938604021021f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-07a938604021021f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "database-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "database-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-0ffbca598eddb609f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ffbca598eddb609f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-00b58cda0b80519ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00b58cda0b80519ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-05ff0aadae29fcc23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-05ff0aadae29fcc23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:subnet/subnet-0ac05e7fb3d8e8248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0ac05e7fb3d8e8248",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnets",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnets",
              "Owner": "amazon"
            },
            "vpc_id": "vpc-0c0e268ac6f57c3f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661509478373:vpc/vpc-0c0e268ac6f57c3f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0970294967cebd83d",
            "default_route_table_id": "rtb-040821e287b0a67ae",
            "default_security_group_id": "sg-02f9fa8cf73f17472",
            "dhcp_options_id": "dopt-1f642265",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0e268ac6f57c3f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-040821e287b0a67ae",
            "owner_id": "661509478373",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "amazon"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "amazon"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}